--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-setuptools~=68.2.2
-click~=8.1.7
+setuptools~=67.8.0
+click~=8.0.4
 yaml~=0.2.5
 pyyaml~=6.0.1
-numpy~=1.26.3
-scipy~=1.11.4
+numpy~=1.24.4
+scipy~=1.10.1
 scikit-learn~=1.3.0
+pandas~=2.2.0
+seaborn~=0.10.1
