feat[level2] extended readme, debugged
Signed-off-by: Pavel Kohout <xkohou15@stud.fit.vutbr.cz>

--- a/results/lgk/config/lgk_config.yaml
+++ b/results/lgk/config/lgk_config.yaml
@@ -11,3 +11,11 @@ protein_name: LGK         # name of the protein to more customize the output fil
 
 # AA indices to use, see indices/aaindex.csv to get all indices currently supported by predictor, please add custom one
 indices: FASG760101 FASG760102 GOLD730102 WOLR790101 BHAR880101 BULH740101 FAUJ880108 ZIMJ680103 ZIMJ680104
+
+# Level 2 statistics custom setting
+highlight_top: 20  # number of suggested substitutions to be highlighted in the AA index csv report per sequentiality, fluctuation...
+#highlight_pos: 1 2 80 60  # special positions to highlight in a level 2 report
+
+# set to custom value if you find that conservation report is shifted
+#(can be caused by wrong alignment of predicted sequences, rare default None, just for visualization purposes)
+#conservation_offset: 2
